--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-.terraform
-*.tfstate*
+#  Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# .tfvars files
 *.tfvars
+
+# VS Code
+.vscode/
